package fr.mgrimaud.snake.model.agent.strategy;

import fr.mgrimaud.snake.utils.AgentAction;

public interface Strategy {
    public AgentAction execute();
}
